# QKChat

./: .cursorignore  .gitignore  .windsurfrules  README.md  高并发优化方案实施总结.md
.augment/rules/: 开发规范.md  开发说明.md
.trae/: .ignore
.trae/rules/: QML.mdc  project_rules.md  terminal_rules.md
Client/: CMakeLists.txt  Main.qml  README.md  main.cpp  qml.qrc  使用指南.md  测试清单.md  窗口改造说明.md
Client/.tasks/: 2025-01-14_1_fix-login-interface.md
Client/qml/: LoginPage.qml  RegisterPage.qml
Client/qml/components/: AddFriendConfirmDialog.qml  ChatView.qml  CustomButton.qml  CustomDropdownButton.qml  CustomTextField.qml  FriendListItem.qml  FriendListView.qml  GroupHeader.qml  GroupManagementDialog.qml  GroupedListView.qml  LoadingDialog.qml  MessageAnimation.qml  MessageBubble.qml  MessageDialog.qml  PageTransition.qml  SettingsManager.qml  ThemeManager.qml  UserDetailDialog.qml  UserSearchDialog.qml  UserSearchResultItem.qml  qmldir
Client/qml/pages/: ChatInterface_README.md  MainPage.qml  功能演示说明.md
Client/qml/windows/: AddFriendWindow.qml  ChatWindow.qml  LoginWindow.qml  UserDetailWindow.qml
Client/src/: DatabaseManager.cpp  DatabaseManager.h
Client/src/auth/: AuthManager.cpp  AuthManager.h  NetworkClient.cpp  NetworkClient.h  SessionManager.cpp  SessionManager.h
Client/src/chat/: ChatNetworkClient.cpp  ChatNetworkClient.h
Client/src/models/: AuthResponse.cpp  AuthResponse.h  ChatMessageManager.cpp  ChatMessageManager.h  FriendGroupManager.cpp  FriendGroupManager.h  RecentContactsManager.cpp  RecentContactsManager.h  User.cpp  User.h
Client/src/utils/: Crypto.cpp  Crypto.h  Logger.cpp  Logger.h  NetworkQualityMonitor.cpp  NetworkQualityMonitor.h  SmartErrorHandler.cpp  SmartErrorHandler.h  Validator.cpp  Validator.h
Server/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
Server/config/: README.md  server.json  server_high_performance.json
Server/src/: ServerManager.cpp  ServerManager.h
Server/src/auth/: AuthCache.cpp  AuthCache.h  EmailService.cpp  EmailService.h  SessionManager.cpp  SessionManager.h  SmtpClient.cpp  SmtpClient.h  UserIdGenerator.cpp  UserIdGenerator.h  UserRegistrationService.cpp  UserRegistrationService.h  UserService.cpp  UserService.h  VerificationCodeManager.cpp  VerificationCodeManager.h
Server/src/cache/: CacheManager.cpp  CacheManager.h
Server/src/chat/: ChatProtocolHandler.cpp  ChatProtocolHandler.h  FriendService.cpp  FriendService.h  MessageService.cpp  MessageService.h  OnlineStatusService.cpp  OnlineStatusService.h
Server/src/config/: ConfigManager.cpp  ConfigManager.h
Server/src/database/: DatabaseConnectionPool.cpp  DatabaseConnectionPool.h  DatabaseManager.cpp  DatabaseManager.h  RedisClient.cpp  RedisClient.h
Server/src/models/: User.cpp  User.h
Server/src/monitoring/: PerformanceMonitor.h
Server/src/network/: AsyncMessageQueue.cpp  AsyncMessageQueue.h  ClientHandler.cpp  ClientHandler.h  MessageWorker.cpp  MessageWorker.h  ProtocolHandler.cpp  ProtocolHandler.h  TcpServer.cpp  TcpServer.h  ThreadPoolServer.cpp  ThreadPoolServer.h
Server/src/rate_limit/: RateLimitManager.cpp  RateLimitManager.h
Server/src/security/: CertificateManager.cpp  CertificateManager.h  OpenSSLHelper.cpp  OpenSSLHelper.h
Server/src/utils/: Crypto.cpp  Crypto.h  DatabaseErrorHandler.cpp  DatabaseErrorHandler.h  Logger.cpp  Logger.h  ThreadSafeSingleton.h  Validator.cpp  Validator.h
scripts/: check_status.sql  cleanup_minimal.sql
